--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "lint:js": "./node_modules/.bin/eslint \"src/**/*.js\"",
     "lint:styles": "stylelint \"src/**/*.scss\"",
     "build:dist": "cross-env NODE_ENV=production webpack --config ./config/webpack.config.js",
-    "deploy": "dploy"
+    "deploy": "cross-env NODE_ENV=production webpack --config ./config/webpack.config.js && gh-pages"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -43,6 +43,7 @@
     "autoprefixer": "^9.4.3",
     "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^1.0.0",
+    "cname-webpack-plugin": "^1.0.4",
     "cross-env": "^5.2.0",
     "css-loader": "^2.0.1",
     "cssnano": "^4.1.7",
@@ -83,6 +84,7 @@
     "dploy": "^1.2.0",
     "enquirer": "^2.2.0",
     "figlet": "^1.2.1",
+    "gh-pages": "^2.0.1",
     "jquery": "^3.3.1",
     "normalize.css": "^8.0.1",
     "reset-css": "^4.0.1",
