--- a/package.json
+++ b/package.json
@@ -34,7 +34,13 @@
     "lint:js": "./node_modules/.bin/eslint \"src/**/*.js\"",
     "lint:styles": "stylelint \"src/**/*.scss\"",
     "build:dist": "cross-env NODE_ENV=production webpack --config ./config/webpack.config.js",
-    "deploy": "cross-env NODE_ENV=production webpack --config ./config/webpack.config.js && gh-pages"
+    "deploy": "gh-pages-deploy"
+  },
+  "gh-pages-deploy": {
+    "staticpath": "dist",
+    "cname": "elysian.szabogabi.com",
+    "commit": "a custom commit message",
+    "noprompt": false
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -84,7 +90,7 @@
     "dploy": "^1.2.0",
     "enquirer": "^2.2.0",
     "figlet": "^1.2.1",
-    "gh-pages": "^2.0.1",
+    "gh-pages-deploy": "^0.5.1",
     "jquery": "^3.3.1",
     "normalize.css": "^8.0.1",
     "reset-css": "^4.0.1",
