--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "webpackbar": "^3.1.4"
   },
   "dependencies": {
+    "@glidejs/glide": "^3.2.6",
     "chalk": "^2.4.1",
     "clear": "^0.1.0",
     "dploy": "^1.2.0",
