--- a/package.json
+++ b/package.json
@@ -85,9 +85,11 @@
         "dploy": "^1.2.0",
         "enquirer": "^2.2.0",
         "figlet": "^1.2.1",
+        "flexboxgrid-sass": "^8.0.5",
         "gh-pages": "^2.0.1",
         "jquery": "^3.3.1",
         "normalize.css": "^8.0.1",
+        "photoswipe": "^4.1.3",
         "reset-css": "^4.0.1",
         "sanitize.css": "^8.0.0",
         "webpack-dev-server": "^3.1.10"
